--- a/bower.json
+++ b/bower.json
@@ -6,5 +6,8 @@
     "ember-cli-test-loader": "0.2.2",
     "ember-qunit-notifications": "0.1.0",
     "normalize-scss": "normalize.scss#~5.0.3"
+  },
+  "devDependencies": {
+    "compass-sass-mixins": "*"
   }
 }
