--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todo-app",
+  "name": "genbook-app",
   "version": "0.0.0",
   "description": "Small description for todo-app goes here",
   "private": true,
